--- a/readme.org
+++ b/readme.org
@@ -85,6 +85,10 @@
    :LOGBOOK:
    CLOCK: [2019-06-05 Wed 20:06]--[2019-06-05 Wed 20:41] =>  0:35
    :END:
+** Allow users to interact with the overview chart
+   :LOGBOOK:
+   CLOCK: [2019-06-05 Wed 20:59]--[2019-06-05 Wed 22:10] =>  1:11
+   :END:
 
 
 * Resources
