--- a/readme.org
+++ b/readme.org
@@ -89,6 +89,10 @@
    :LOGBOOK:
    CLOCK: [2019-06-05 Wed 20:59]--[2019-06-05 Wed 22:10] =>  1:11
    :END:
+** Refactor distribution extraction
+   :LOGBOOK:
+   CLOCK: [2019-06-05 Wed 22:21]--[2019-06-05 Wed 22:46] =>  0:25
+   :END:
 
 
 * Resources
